--- a/plugins/inventorysnapshots/pom.xml
+++ b/plugins/inventorysnapshots/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>work.fking.corpa</groupId>
-    <artifactId>deathinv</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>inventory-snapshots</artifactId>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.release>17</maven.compiler.release>
